Include modifications to allow access to test classes by JUnitPerf